# esp32-s3_template

./: .gitignore  .gitmodules  CMakeLists.txt  manage.sh  readme.txt  sdkconfig.defaults
main/: CMakeLists.txt
main/src/: main.c
